--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,30 @@ table {
   overflow-x: auto;
   white-space: nowrap;
 }
+
+/* Bot iframe */
+
+#bp-web-widget-container .bp-widget-web {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  #bp-web-widget-container .bp-widget-web {
+    width: 408px;
+  }
+  #bp-web-widget-container .bp-widget-web .bpw-layout {
+    margin: 1rem 1.5rem;
+    margin-left: 0;
+    border-radius: 0.5rem;
+    overflow: hidden;
+
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(118 118 118 / var(--tw-ring-opacity));
+    --tw-ring-offset-width: 0px;
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+      var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+      calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+      var(--tw-shadow, 0 0 #0000);
+  }
+}
