--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,8 @@ table {
 
 #bp-web-widget-container .bp-widget-web {
   width: 100%;
+  right: 1.5rem;
+  bottom: 1.5rem;
 }
 @media (min-width: 768px) {
   #bp-web-widget-container .bp-widget-web {
