--- a/public/bot.css
+++ b/public/bot.css
@@ -10,13 +10,13 @@
   color: var(--gray-500);
   top: 0;
   height: auto;
-  width: calc(100% - 3rem) !important;
+  width: calc(100% - 48px) !important;
   border: none;
   border-radius: 0;
   margin: 0;
   box-shadow: none;
-  margin: 1rem 1.5rem;
-  border-radius: 0.5rem;
+  margin: 16px 24px;
+  border-radius: 8px;
   overflow: hidden;
 
   box-shadow: 0 0 0 0px #fff, 0 0 0 1px rgb(118 118 118), 0 0 #0000;
@@ -25,8 +25,8 @@
 /* Floating Button */
 .bpw-floating-button {
   border-radius: 100%;
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 56px;
+  height: 56px;
   position: fixed;
   box-shadow: none;
   bottom: 0;
@@ -63,7 +63,7 @@
 
 /* Bot info */
 .bpw-botinfo-container {
-  padding: 1rem 1.5rem;
+  padding: 16px 24px;
 }
 
 .bpw-botinfo-summary {
@@ -93,11 +93,11 @@
   color: var(--gray-500);
 }
 .bpw-botinfo-container .bpw-botinfo-start-button {
-  margin: 1.5rem auto;
+  margin: 24px auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 2rem;
+  padding: 16px 32px;
   border-radius: 9px;
   font-weight: 500;
   transition-property: all;
@@ -138,14 +138,14 @@
 }
 
 .bpw-composer-inner textarea {
-  height: 4rem;
+  height: 64px;
 }
 
 .bpw-send-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.5rem 1rem;
+  padding: 8px 16px;
   border-radius: 9px;
   font-weight: 500;
   transition-property: all;
