--- a/public/bot.css
+++ b/public/bot.css
@@ -5,6 +5,7 @@
   --primary-500: #3f9cf5;
 }
 
+
 /* Layout */
 .bpw-layout {
   color: var(--gray-500);
@@ -157,4 +158,24 @@
 
 .bpw-send-button:hover {
   background-color: var(--primary-500) !important;
+}
+
+@media (max-device-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+
+    .bpw-layout {
+        width: 100%!important
+    }
+
+    .bpw-bot-avatar img,.bpw-bot-avatar svg {
+        height: 40px;
+        width: 40px;
+    }
+
+    .bpw-header-icon,.bpw-header-icon svg {
+        height: 16px;
+        width: 16px;
+    }
 }
